@@ -6,6 +6,7 @@ Changes since 2.3.4:
 Lib/
 * Fixed methods ldap.cidict.__contains__() and
   ldap.schema.models.Entry.__contains__()
+* FWIW method LDAPObject.cancel_s() returns a result now
 
 ----------------------------------------------------------------
 Released 2.3.4 2008-03-29
